2014-11-06  Holger Seelig  <holger.seelig@yahoo.de>

	* titania: 

2014-11-04  Holger Seelig  <holger.seelig@yahoo.de>

	* lena.jpg:
	* lena.png: 

2014-11-04  Holger Seelig  <holger.seelig@yahoo.de>

	* lena.png: 

2014-11-03  Holger Seelig  <holger.seelig@yahoo.de>

	* titania.desktop: 

2014-11-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Water1.x3dv:
	* Water2.x3dv:
	* GeometryPropertiesEditor.cpp: 

2014-11-02  Holger Seelig  <holger.seelig@yahoo.de>

	* titania.desktop:
	* GeometryPropertiesEditor.cpp: 

2014-10-31  Holger Seelig  <holger.seelig@yahoo.de>

	* GeometryPropertiesEditor.xml:
	* X3DGeometryPropertiesEditorInterface.h:
	* X3DGeometryPropertiesEditorInterface.cpp:
	* GeometryPropertiesEditor.cpp: 

2014-10-31  Holger Seelig  <holger.seelig@yahoo.de>

	* GeometryPropertiesEditor.xml:
	* X3DGeometryPropertiesEditorInterface.h:
	* X3DGeometryPropertiesEditorInterface.cpp:
	* GeometryPropertiesEditor.h:
	* GeometryPropertiesEditor.cpp: 

2014-10-31  Holger Seelig  <holger.seelig@yahoo.de>

	* NodePropertiesEditor.xml:
	* MaterialEditorPreview.x3dv:
	* X3DNodePropertiesEditorInterface.h:
	* X3DNodePropertiesEditorInterface.cpp:
	* NodePropertiesEditor.cpp:
	* OutlineCellRenderer.cpp: 

2014-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp:
	* X3DGeometryPropertiesEditorInterface.h:
	* X3DGeometryPropertiesEditorInterface.cpp: 

2014-10-27  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* style.css:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* Funny.x3dv:
	* LostValley.x3dv:
	* X3DTextViewEditable.cpp: 

2014-10-26  Holger Seelig  <holger.seelig@yahoo.de>

	* alfa147.x3dv:
	* OutlineFields.h: 

2014-10-24  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeModel.h:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.cpp:
	* X3DTextViewEditable.h:
	* X3DTextViewEditable.cpp: 
