@@ -1,5 +1,9 @@
 2014-11-07  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DGridTool.cpp: 
+
+2014-11-07  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* TransformTool.x3dv:
 	* X3DGridTool.cpp:
 	* X3DTransformNodeTool.h:
